--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.18.1",
     "mongoose": "^8.7.3",
     "nodemailer": "^6.9.16",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "path": "^0.12.7"
   }
 }
