--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "portfolio-balam",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "api/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js",
-    "start": "node app.js",
+    "dev": "nodemon index.js",
+    "start": "node index.js",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
